worked on bundles, added comments where according strings should be added

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -32,3 +32,9 @@ remoteSupportFrameSeekSupportPanelTabConstraintsTabTitle=Seek
 remoteSupportFrameTitle=Remote support
 startService=Start service
 stopService=Stop service
+# Home
+
+# RequestView
+descriptionRequestView=New Text
+# SupportView
+
