--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -30,3 +30,8 @@ remoteSupportFrameSeekSupportPanelTabConstraintsTabTitle=Suchen
 remoteSupportFrameTitle=Fernwartung
 startService=Dienst starten
 stopService=Dienst beenden
+# Home
+
+# RequestView
+descriptionRequestView=New Text
+# SupportView
