defined variables in english and german to set it everywhere needed in the code

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -32,7 +32,13 @@ remoteSupportFrameSeekSupportPanelTabConstraintsTabTitle=Seek
 remoteSupportFrameTitle=Remote support
 startService=Start service
 stopService=Stop service
+
 # Home
+homeRequestBigLbl=homeRequestBigLbl
+homeRequestSmallLbl=homeRequestSmallLbl
+homeSupportBigLbl=homeSupportBigLbl
+homeSupportSmallLbl=homeSupportSmallLbl
+homeHelpText=homeHelpText
 
 # RequestView
 descriptionRequestView=New Text
