--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -30,7 +30,13 @@ remoteSupportFrameSeekSupportPanelTabConstraintsTabTitle=Suchen
 remoteSupportFrameTitle=Fernwartung
 startService=Dienst starten
 stopService=Dienst beenden
+
 # Home
+homeRequestBigLbl=homeRequestBigLbl
+homeRequestSmallLbl=homeRequestSmallLbl
+homeSupportBigLbl=homeSupportBigLbl
+homeSupportSmallLbl=homeSupportSmallLbl
+homeHelpText=homeHelpText
 
 # RequestView
 descriptionRequestView=New Text
