finished for requestView

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -41,6 +41,12 @@ homeSupportSmallLbl=homeSupportSmallLbl
 homeHelpText=homeHelpText
 
 # RequestView
-descriptionRequestView=New Text
-# SupportView
+requestTitleLbl=requestTitleLbl
+requestDescriptionLbl=requestDescriptionLbl
+requestKeyGeneratorPane=requestKeyGeneratorPane
+requestGeneratedKeyFld=requestGeneratedKeyFld
+requestPredefinedAdressessPane=requestPredefinedAdressessPane
+requestStatusLblWaiting=requestStatusLblWaiting
+requestStatusLblReady=requestStatusLblReady
 
+# SupportView
