--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -39,5 +39,12 @@ homeSupportSmallLbl=homeSupportSmallLbl
 homeHelpText=homeHelpText
 
 # RequestView
-descriptionRequestView=New Text
+requestTitleLbl=requestTitleLbl
+requestDescriptionLbl=requestDescriptionLbl
+requestKeyGeneratorPane=requestKeyGeneratorPane
+requestGeneratedKeyFld=requestGeneratedKeyFld
+requestPredefinedAdressessPane=requestPredefinedAdressessPane
+requestStatusLblWaiting=requestStatusLblWaiting
+requestStatusLblReady=requestStatusLblReady
+
 # SupportView
