added initial values for string class for SupportView

--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -48,3 +48,12 @@ requestStatusLblWaiting=requestStatusLblWaiting
 requestStatusLblReady=requestStatusLblReady
 
 # SupportView
+supportTitleLbl=supportTitleLbl
+supportDescriptionLbl=supportDescriptionLbl
+supportConnectBtn=supportConnectBtn
+supportKeyInputPane=supportKeyInputPane
+supportAdressBookPane=supportAdressBookPane
+supportStatusLblWaiting=supportStatusLblWaiting
+supportStatusLblReady=supportStatusLblReady
+
+#PopOver
