added some texts to see how it looks

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -34,16 +34,15 @@ startService=Start service
 stopService=Stop service
 
 # Home
-homeRequestBigLbl=homeRequestBigLbl
-homeRequestSmallLbl=homeRequestSmallLbl
-homeSupportBigLbl=homeSupportBigLbl
-homeSupportSmallLbl=homeSupportSmallLbl
-
+homeRequestBigLbl=I need help
+homeRequestSmallLbl=Get somebody to help you remotely
+homeSupportBigLbl=I want to assist someone
+homeSupportSmallLbl=Somebody needs my help
 
 # RequestView
 requestTitleLbl=requestTitleLbl
-requestDescriptionLbl=requestDescriptionLbl
-requestKeyGeneratorPane=requestKeyGeneratorPane
+requestDescriptionLbl=Choose the supporter who should help you. You can also add a new supporter or edit an existing one. Contact your supporter for connection details.
+requestKeyGeneratorPane=Key generation
 requestGeneratedKeyFld=requestGeneratedKeyFld
 requestPredefinedAdressessPane=requestPredefinedAdressessPane
 requestStatusLblWaiting=requestStatusLblWaiting
