--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -32,16 +32,15 @@ startService=Dienst starten
 stopService=Dienst beenden
 
 # Home
-homeRequestBigLbl=homeRequestBigLbl
-homeRequestSmallLbl=homeRequestSmallLbl
-homeSupportBigLbl=homeSupportBigLbl
-homeSupportSmallLbl=homeSupportSmallLbl
-homeHelpText=homeHelpText
+homeRequestBigLbl=Ich benötige Hilfe
+homeRequestSmallLbl=Jemanden um Hilfe bitten
+homeSupportBigLbl=Ich möchte jemandem helfen
+homeSupportSmallLbl=Jemand benötigt meine Hilfe
 
 # RequestView
 requestTitleLbl=requestTitleLbl
-requestDescriptionLbl=requestDescriptionLbl
-requestKeyGeneratorPane=requestKeyGeneratorPane
+requestDescriptionLbl=Wählen Sie den Supporter, welcher Sie unterstützen soll. Sie können auch neue Supporter hinzufügen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter für die Einstellungsdetails.
+requestKeyGeneratorPane=Schlüsselgenerierung
 requestGeneratedKeyFld=requestGeneratedKeyFld
 requestPredefinedAdressessPane=requestPredefinedAdressessPane
 requestStatusLblWaiting=requestStatusLblWaiting
@@ -57,3 +56,6 @@ supportStatusLblWaiting=supportStatusLblWaiting
 supportStatusLblReady=supportStatusLblReady
 
 #PopOver
+homeHelpText=homeHelpText
+
+#Dialog
