--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -32,15 +32,17 @@ startService=Dienst starten
 stopService=Dienst beenden
 
 # Home
-homeRequestBigLbl=Ich benötige Hilfe
+homeRequestBigLbl=Ich ben\u00F6tige Hilfe
 homeRequestSmallLbl=Jemanden um Hilfe bitten
-homeSupportBigLbl=Ich möchte jemandem helfen
-homeSupportSmallLbl=Jemand benötigt meine Hilfe
+homeSupportBigLbl=Ich m\u00F6chte jemandem helfen
+homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
 requestTitleLbl=requestTitleLbl
-requestDescriptionLbl=Wählen Sie den Supporter, welcher Sie unterstützen soll. Sie können auch neue Supporter hinzufügen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter für die Einstellungsdetails.
-requestKeyGeneratorPane=Schlüsselgenerierung
+requestDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll. Sie k\u00F6nnen auch neue \
+  Supporter hinzuf\u00fcgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00fcr \
+  die Einstellungsdetails.
+requestKeyGeneratorPane=Schl\u00fcsselgenerierung
 requestGeneratedKeyFld=requestGeneratedKeyFld
 requestPredefinedAdressessPane=requestPredefinedAdressessPane
 requestStatusLblWaiting=requestStatusLblWaiting
