--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -38,26 +38,48 @@ homeSupportBigLbl=Ich m\u00F6chte jemandem helfen
 homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
-requestTitleLbl=requestTitleLbl
+requestTitleLbl=Schl\u00fcssel generieren
 requestDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll. Sie k\u00F6nnen auch neue \
   Supporter hinzuf\u00fcgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00fcr \
   die Einstellungsdetails.
 requestKeyGeneratorPane=Schl\u00fcsselgenerierung
-requestGeneratedKeyFld=requestGeneratedKeyFld
-requestPredefinedAdressessPane=requestPredefinedAdressessPane
-requestStatusLblWaiting=requestStatusLblWaiting
-requestStatusLblReady=requestStatusLblReady
+requestGeneratedKeyFld=Schl\u00fcssel wird generiert...
+requestPredefinedAdressessPane=Adressbuch
+requestStatusLblWaiting=Warte...
+requestStatusLblReady=Bereit
 
 # SupportView
-supportTitleLbl=supportTitleLbl
-supportDescriptionLbl=supportDescriptionLbl
-supportConnectBtn=supportConnectBtn
-supportKeyInputPane=supportKeyInputPane
-supportAdressBookPane=supportAdressBookPane
-supportStatusLblWaiting=supportStatusLblWaiting
-supportStatusLblReady=supportStatusLblReady
+supportTitleLbl=Schl\u00fcssel eingeben
+supportDescriptionLbl=Initialisiert eine neue Fernwartung durch die Eingabe des generierten Schl\u00fcssels Ihres Partners
+supportConnectBtn=Verbinden
+supportKeyInputPane=Schl\u00fcsseleingabe
+supportAdressBookPane=Adressbuch
+supportStatusLblWaiting=Warte...
+supportStatusLblReady=Bereit
 
 #PopOver
 homeHelpText=homeHelpText
+supportHelpText=Schl\u00fcsseleingabe - Verbindungsaufbau\
+Um eine Verbindung zu Ihrem Partner aufzubauen, ben\u00F6tigen Sie dessen generierten Schl\u00fcssel. \
+  Tragen Sie den Schl\u00fcssel in das Textfeld auf der linken Seite ein und klicken Sie dann auf “Verbinden” um eine \
+  Verbindung herzustellen.\
+\
+Statusbar\
+Die Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist.\
+Gr\u00fcn: Verbindungsaufbau m\u00F6glich\
+Orange: Verbindungsaufbau noch nicht m\u00F6glich.\
+\
+Bitte kontaktieren Sie imedias, falls der Verbindungsaufbau nicht m\u00F6glich ist.
+
+requestHelpText=Schl\u00fcsselgenerierung - Verbindungsaufbau %%n \
+Zur Herstellung einer Verbindung mit Ihrem Supporter m\u00fcssen Sie einen Schl\u00fcssel generieren. \
+  Teilen Sie diesen Ihrem Supporter mit. Er ben\u00F6tigt Ihren Schl\u00fcssel um eine Verbindung herzustellen. \
+  \
+  Statusbar\
+  Die Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist. \
+Gr\u00fcn: Verbindungsaufbau m\u00F6glich \
+Orange: Verbindungsaufbau noch nicht m\u00F6glich. \
+\
+Bitte kontaktieren Sie Ihren Supporter, falls der Verbindungsaufbau nicht m\u00F6glich ist. 
 
 #Dialog
