Set texts for english bundle.

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -40,25 +40,33 @@ homeSupportBigLbl=I want to assist someone
 homeSupportSmallLbl=Somebody needs my help
 
 # RequestView
-requestTitleLbl=requestTitleLbl
-requestDescriptionLbl=Choose the supporter who should help you. You can also add a new supporter or edit an existing one. Contact your supporter for connection details.
+requestTitleLbl=Generate key
+requestDescriptionLbl=Please share this key with your supporter and wait for the connection.
 requestKeyGeneratorPane=Key generation
-requestGeneratedKeyFld=requestGeneratedKeyFld
-requestPredefinedAdressessPane=requestPredefinedAdressessPane
-requestStatusLblWaiting=requestStatusLblWaiting
-requestStatusLblReady=requestStatusLblReady
+requestGeneratedKeyFld=Generating key...
+requestPredefinedAdressessPane=Predefined Addresses
+requestStatusLblWaiting=Waiting...
+requestStatusLblReady=Ready!
 
 # SupportView
-supportTitleLbl=supportTitleLbl
-supportDescriptionLbl=supportDescriptionLbl
-supportConnectBtn=supportConnectBtn
-supportKeyInputPane=supportKeyInputPane
-supportAdressBookPane=supportAdressBookPane
-supportStatusLblWaiting=supportStatusLblWaiting
-supportStatusLblReady=supportStatusLblReady
+supportTitleLbl=Enter Key
+supportDescriptionLbl=Initiate a new remote support connection by entering the generated keyphrase your partner shared with you.
+supportConnectBtn=Connect
+supportKeyInputPane=Key input
+supportAdressBookPane=Addressbook
+supportStatusLblWaiting=Waiting...
+supportStatusLblReady=Ready!
 
 #PopOver
-homeHelpText=homeHelpText
+homeHelpText=Key generation - connection establishment\
+  To establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\
+  Status bar\
+  \
+  The status bar at the end of the window shows if there is the possibility to create a connection.\
+  Green: Possible to establish connection.\
+  Orange: Not yet possible to establish connection.\
+  \
+  Please contact your supporter if it is not possible to create a connection.
 
 #Dialog
 
