--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -50,7 +50,8 @@ requestStatusLblReady=Bereit
 
 # SupportView
 supportTitleLbl=Schl\u00fcssel eingeben
-supportDescriptionLbl=Initialisiert eine neue Fernwartung durch die Eingabe des generierten Schl\u00fcssels Ihres Partners
+supportDescriptionLbl=Initialisiert eine neue Fernwartung durch die Eingabe des generierten Schl\u00fcssels \
+  Ihres Partners
 supportConnectBtn=Verbinden
 supportKeyInputPane=Schl\u00fcsseleingabe
 supportAdressBookPane=Adressbuch
