figured out what breaks the generation of the strings...

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -58,6 +58,7 @@ supportStatusLblWaiting=Waiting...
 supportStatusLblReady=Ready!
 
 #PopOver
+#FIXME: Line breaks do break the python script...
 homeHelpText=Key generation - connection establishment\
   To establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\
   Status bar\
