--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -59,15 +59,7 @@ supportStatusLblReady=Ready!
 
 #PopOver
 #FIXME: Line breaks do break the python script...
-homeHelpText=Key generation - connection establishment\
-  To establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\
-  Status bar\
-  \
-  The status bar at the end of the window shows if there is the possibility to create a connection.\
-  Green: Possible to establish connection.\
-  Orange: Not yet possible to establish connection.\
-  \
-  Please contact your supporter if it is not possible to create a connection.
+homeHelpText=Key generation - connection establishment\n\nTo establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact your supporter if it is not possible to create a connection.
 
 #Dialog
 
