--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -60,6 +60,14 @@ supportStatusLblReady=Ready!
 #PopOver
 supportHelpText=Key generation - connection establishment\n\nTo establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact your supporter if it is not possible to create a connection.
 requestHelpText=Key input - connection establishment\n\nTo establish a connection you need your partners generated key. Enter the key in the text field on the left and click on “Connect” to establish a connection.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact imedias if it is not possible to create a connection.
-homeHelpText=
+homeHelpText=Here you can choose between the options “I need help” and “I want to help someone”.\n\nClick on “I need help” if a supporter should connect to your device.\n\nClick on “I want to help someone” if you want to connect to a computer from someone you want to help out.
+
 #Dialog
+dialogTitleText=Supporter
+dialogNameText=Name
+dialogAddressText=Address
+dialogPortText=Port
+dialogImageText=Image
+dialogChargeableLbl=Chargeable
+dialogEncryptedLbl=Encrypted
 
