--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -34,7 +34,7 @@ stopService=Dienst beenden
 # Home
 homeRequestBigLbl=Ich ben\u00F6tige Hilfe
 homeRequestSmallLbl=Jemanden um Hilfe bitten
-homeSupportBigLbl=Ich m\u00F6chte jemandem helfen
+homeSupportBigLbl=Ich m\u00F6chte helfen
 homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
