added translations into the bundle for Dialog

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -70,3 +70,9 @@ dialogPortText=Port
 dialogImageText=Image
 dialogChargeableLbl=Chargeable
 dialogEncryptedLbl=Encrypted
+
+#Settings
+supportCompressionLbl=Compression
+supportQualityLbl=Quality
+supportBgr233Lbl=BGR233
+requestViewOnlyLbl=View only
