added new strings to the bundle

--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -45,6 +45,7 @@ requestGeneratedKeyFld=Schl\u00fcssel wird generiert...
 requestPredefinedAdressessPane=Adressbuch
 requestStatusLblWaiting=Warte...
 requestStatusLblReady=Bereit
+requestSupporterDescriptionLbl=Hier befinden sich die vordefinierten Supporter.
 
 # SupportView
 supportTitleLbl=Schl\u00fcssel eingeben
