--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -56,7 +56,7 @@ supportKeyInputPane=Key input
 supportAdressBookPane=Addressbook
 supportStatusLblWaiting=Waiting...
 supportStatusLblReady=Ready!
-requestSupporterDescriptionLbl=
+requestSupporterDescriptionLbl=Choose the supporter who should help you. You can also add a new supporter or edit an existing one. Contact your supporter for connection details.
 
 #PopOver
 supportHelpText=Key generation - connection establishment\n\nTo establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact your supporter if it is not possible to create a connection.
