added strings to the properties for the new Expert settings view.

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -71,3 +71,14 @@ dialogPortText=Port
 dialogImageText=Image
 dialogChargeableLbl=Chargeable
 dialogEncryptedLbl=Encrypted
+
+#ExpertSettings
+expertForceConnectOverServerLbl=Force connection over server
+expertKeyserverIpLbl=Keyserver IP-Adress
+expertKeyserverHttpLbl=Keyserver HTTP-Port
+expertVncPortLbl=VNC Port
+expertIcePortLbl=ICE Port
+expertUdpPackageSizeLbl=UDP package size
+expertForwardingPortLbl=Local forwarding port
+expertStunServerPortLbl=Stunserver port
+expertStunserverLbl=Stunserver IP-Adress
