--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -81,4 +81,4 @@ expertIcePortLbl=ICE Port
 expertUdpPackageSizeLbl=UDP package size
 expertForwardingPortLbl=Local forwarding port
 expertStunServerPortLbl=Stunserver port
-expertStunserverLbl=Stunserver IP-Adress
+expertStunserverLbl=Stunservers
