--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -70,4 +70,4 @@ expertIcePortLbl=ICE Port
 expertUdpPackageSizeLbl=UDP Paketgrösse
 expertForwardingPortLbl=lokaler Weiterleitungsport
 expertStunServerPortLbl=Stunserver Port
-expertStunserverLbl=Stunserver IP-Addresse
+expertStunserverLbl=Stunservers
