added wording for another button

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -82,3 +82,4 @@ expertUdpPackageSizeLbl=UDP package size
 expertForwardingPortLbl=Local forwarding port
 expertStunServerPortLbl=Stunserver port
 expertStunserverLbl=Stunservers
+expertSettingsBtn=Expert settings
