--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -71,3 +71,4 @@ expertUdpPackageSizeLbl=UDP Paketgrösse
 expertForwardingPortLbl=lokaler Weiterleitungsport
 expertStunServerPortLbl=Stunserver Port
 expertStunserverLbl=Stunservers
+expertSettingsBtn=Experteneinstellungen
