--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -62,12 +62,12 @@ supportHelpText=Schl\u00fcsseleingabe - Verbindungsaufbau\n\nUm eine Verbindung 
 requestHelpText=Schl\u00fcsselgenerierung - Verbindungsaufbau\n\nZur Herstellung einer Verbindung mit Ihrem Supporter m\u00fcssen Sie einen Schl\u00fcssel generieren. \nTeilen Sie diesen Ihrem Supporter mit. Er ben\u00F6tigt Ihren Schl\u00fcssel um eine Verbindung herzustellen. \n\nStatusbar\nDie Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist. \nGr\u00fcn: Verbindungsaufbau m\u00F6glich\nOrange: Verbindungsaufbau noch nicht m\u00F6glich.\n\nBitte kontaktieren Sie Ihren Supporter, falls der Verbindungsaufbau nicht m\u00F6glich ist.
 
 #ExpertSettings
-expertForceConnectOverServerLbl=Verbindung über Server erzwingen
-expertKeyserverIpLbl=Schlüsselserver IP-Addresse
-expertKeyserverHttpLbl=Schlüsselserver HTTP-Port
+expertForceConnectOverServerLbl=Verbindung \u00fcber Server erzwingen
+expertKeyserverIpLbl=Schl\u00fcsselserver IP-Addresse
+expertKeyserverHttpLbl=Schl\u00fcsselserver HTTP-Port
 expertVncPortLbl=VNC Port
 expertIcePortLbl=ICE Port
-expertUdpPackageSizeLbl=UDP Paketgrösse
+expertUdpPackageSizeLbl=UDP Paketgr\u00F6sse
 expertForwardingPortLbl=lokaler Weiterleitungsport
 expertStunServerPortLbl=Stunserver Port
 expertStunserverLbl=Stunservers
