--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -57,6 +57,13 @@ supportAdressBookPane=Addressbook
 supportStatusLblWaiting=Waiting...
 supportStatusLblReady=Ready!
 
+#StartServiceView
+startServiceBtn=Start Service
+startServiceTitleLbl=Start Service
+startServiceDescpriptionLbl=Your partner can only connect through the addressbook if you started the service first.
+
+
+
 #PopOver
 supportHelpText=Key generation - connection establishment\n\nTo establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact your supporter if it is not possible to create a connection.
 requestHelpText=Key input - connection establishment\n\nTo establish a connection you need your partners generated key. Enter the key in the text field on the left and click on \u0022Connect\u0022 to establish a connection.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact imedias if it is not possible to create a connection.
