styled settings and tried things out with the supporter buttons

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -84,6 +84,7 @@ supportCompressionLbl=Compression
 supportQualityLbl=Quality
 supportBgr233Lbl=BGR233
 requestViewOnlyLbl=View only
+bgr233DescriptionLbl=This option lowers the quality of the conncection.
 
 #ExpertSettings
 expertForceConnectOverServerLbl=Force connection over server
