--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -71,6 +71,7 @@ supportCompressionLbl=Kompression
 supportQualityLbl=Qualit\u00e4t
 supportBgr233Lbl=BGR233
 requestViewOnlyLbl=Nur Bild \u00fcbertragen
+bgr233DescriptionLbl=Diese Option verringert die Qualit\u00e4t der \u00dcbertragung.
 
 #ExpertSettings
 expertForceConnectOverServerLbl=Verbindung \u00fcber Server erzwingen
