Set Text alignment to left.

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -53,7 +53,7 @@ supportTitleLbl=Enter Key
 supportDescriptionLbl=Initiate a new remote support connection by entering the generated keyphrase your partner shared with you.
 supportConnectBtn=Connect
 supportKeyInputPane=Key input
-supportAdressBookPane=Addressbook
+supportAdressBookPane=Start Service
 supportStatusLblWaiting=Waiting...
 supportStatusLblReady=Ready!
 requestSupporterDescriptionLbl=Choose the supporter who should help you. You can also add a new supporter or edit an existing one. Contact your supporter for connection details.
@@ -62,7 +62,6 @@ requestSupporterDescriptionLbl=Choose the supporter who should help you. You can
 startServiceBtn=Start Service
 startServiceTitleLbl=Start Service
 startServiceDescpriptionLbl=Your partner can only connect through the addressbook if you started the service first.
-
 
 
 #PopOver
