--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -52,7 +52,7 @@ supportTitleLbl=Schl\u00fcssel eingeben
 supportDescriptionLbl=Initialisiert eine neue Fernwartung durch die Eingabe des generierten Schl\u00fcssels Ihres Partners
 supportConnectBtn=Verbinden
 supportKeyInputPane=Schl\u00fcsseleingabe
-supportAdressBookPane=Adressbuch
+supportAdressBookPane=Dienst starten
 supportStatusLblWaiting=Warte...
 supportStatusLblReady=Bereit
 
