Expert settings styling

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -86,6 +86,7 @@ requestViewOnlyLbl=View only
 bgr233DescriptionLbl=This option lowers the quality of the conncection.
 
 #ExpertSettings
+expertSettingsDialogTitle=Expert settings
 expertForceConnectOverServerLbl=Force connection over server
 expertKeyserverIpLbl=Keyserver IP-Adress
 expertKeyserverHttpLbl=Keyserver HTTP-Port
