--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -74,6 +74,7 @@ requestViewOnlyLbl=Nur Bild \u00fcbertragen
 bgr233DescriptionLbl=Diese Option verringert die Qualit\u00e4t der \u00dcbertragung.
 
 #ExpertSettings
+expertSettingsDialogTitle=Experteneinstellungen
 expertForceConnectOverServerLbl=Verbindung \u00fcber Server erzwingen
 expertKeyserverIpLbl=Schl\u00fcsselserver IP-Addresse
 expertKeyserverHttpLbl=Schl\u00fcsselserver HTTP-Port
