Styling for Dialog of supporters and strings.class (forgot to open new branch)

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -70,7 +70,7 @@ requestHelpLbl=Key input - connection establishment\n\nTo establish a connection
 homeHelpLbl=Here you can choose between the options \u0022I need help\u0022 and \u0022I want to help someone\u0022.\n\nClick on \u0022I need help\u0022 if a supporter should connect to your device.\n\nClick on \u0022I want to help someone\u0022 if you want to connect to a computer from someone you want to help out.
 
 #Dialog
-dialogTitleText=Supporter
+dialogTitleText=Supporter Details
 dialogNameText=Name
 dialogAddressText=Address
 dialogPortText=Port
