switched over to strings class

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -59,8 +59,8 @@ supportStatusLblReady=Ready!
 requestSupporterDescriptionLbl=Choose the supporter who should help you. You can also add a new supporter or edit an existing one. Contact your supporter for connection details.
 
 #StartServiceView
-startServiceBtn=Start Service
-startServiceTitleLbl=Start Service
+startService=Start service
+stopService=Stop service
 startServiceDescpriptionLbl=Your partner can only connect through the addressbook if you started the service first.
 
 
