--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -57,8 +57,8 @@ supportStatusLblWaiting=Warte...
 supportStatusLblReady=Bereit
 
 #StartServiceView
-startServiceBtn=Dienst starten
-startServiceTitleLbl=Dienst starten
+startService=Dienst starten
+stopService=Dienst beenden
 startServiceDescpriptionLbl=Damit Ihr Partner durch das Adressbuch eine direkte Verbindung zu Ihnen herstellen kann, muss hier zuerst der Dienst gestartet werden.
 
 #PopOver
