--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -58,6 +58,9 @@ supportStatusLblReady=Bereit
 
 #StartServiceView
 startServiceDescpriptionLbl=Damit Ihr Partner durch das Adressbuch eine direkte Verbindung zu Ihnen herstellen kann, muss hier zuerst der Dienst gestartet werden.
+statusBoxServiceIdle=Dienst läuft nicht
+statusBoxServiceStarted=Dienst wurde gestartet
+statusBoxServiceStopped=Dienst wurde gestoppt
 
 #PopOver
 homeHelpLbl=Hier k\u00F6nnen Sie zwischen den Optionen \u0022Ich ben\u00F6tige Hilfe\u0022 und \u0022Ich m\u00F6chte helfen\u0022 ausw\u00e4hlen.\n\nKlicken Sie auf \u0022Ich ben\u00F6tige Hilfe\u0022 falls sich ein Supporter auf Ihr Ger\u00e4t verbinden soll.\n\nKlicken Sie auf \u0022Ich m\u00F6chte jemandem helfen\u0022 falls Sie sich als Supporter auf einen anderen Computer verbinden m\u00F6chten.
