Changed pattern for the textfields of the expertsettings Added "Bytes" to UDP package size Label.

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -92,7 +92,7 @@ expertKeyserverIpLbl=Keyserver IP-Adress
 expertKeyserverHttpLbl=Keyserver HTTP-Port
 expertVncPortLbl=VNC Port
 expertIcePortLbl=ICE Port
-expertUdpPackageSizeLbl=UDP package size
+expertUdpPackageSizeLbl=UDP package size (Bytes)
 expertForwardingPortLbl=Local forwarding port
 expertStunServerPortLbl=Stunserver port
 expertStunserverLbl=Stunservers
