changed naming according to feedback from @pwigger

--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -93,7 +93,7 @@ expertKeyserverHttpLbl=Keyserver HTTP-Port
 expertVncPortLbl=VNC Port
 expertIcePortLbl=ICE Port
 expertUdpPackageSizeLbl=UDP package size
-expertForwardingPortLbl=Local forwarding port
+expertProxyPortLbl=Proxy port
 expertStunServerPortLbl=Stunserver port
 expertStunserverLbl=Stunservers
 expertSettingsBtn=Expert settings
