--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -90,7 +90,7 @@ expertKeyserverHttpLbl=Schl\u00fcsselserver HTTP-Port
 expertVncPortLbl=VNC Port
 expertIcePortLbl=ICE Port
 expertUdpPackageSizeLbl=UDP Paketgr\u00F6sse
-expertForwardingPortLbl=lokaler Weiterleitungsport
+expertProxyPortLbl=Proxy Port
 expertStunServerPortLbl=Stunserver Port
 expertStunserverLbl=Stunservers
 expertSettingsBtn=Experteneinstellungen
