--- a/src/ch/imedias/rsccfx/localization/Bundle_it.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_it.properties
@@ -34,9 +34,9 @@ stopService=Arresta servizio
 
 #Home
 homeRequestBigLbl=Ho bisogno di aiuto
-homeRequestSmallLbl=Get somebody to help you remotely 
+homeRequestSmallLbl=Get somebody to help you remotely
 homeSupportBigLbl=Io voglio aiutare qualcuno
-homeSupportSmallLbl= Qualcuno ha bisogno del mio aiuto
+homeSupportSmallLbl=Qualcuno ha bisogno del mio aiuto
 
 #RequestView
 requestTitleLbl=Genera chiave
@@ -44,13 +44,13 @@ requestDescriptionLbl=Si prega di condividere questa chiave con il tuo supporter
 requestKeyGeneratorPane= Generazione chiave
 requestGeneratedKeyFld=Chiave viene generata…
 requestPredefinedAdressessPane=Indirizzi predefiniti
-requestStatusLblWaiting=Attesa ... 
+requestStatusLblWaiting=Attesa ...
 requestStatusLblReady=Pronto!
 
 #SupportView
 supportTitleLbl=Inserire chiave
-supportDescriptionLbl=Per avviare una nuova connessione di supporto remoto immettere la frase chiave generata è condivisa dal partner.  
-supportConnectBtn=Connesso 
+supportDescriptionLbl=Per avviare una nuova connessione di supporto remoto immettere la frase chiave generata è condivisa dal partner.
+supportConnectBtn=Connesso
 supportKeyInputPane=Inserire chiave
 supportAdressBookPane=Avviare servizio
 supportStatusLblWaiting=In attesa ...
@@ -60,13 +60,12 @@ requestSupporterDescriptionLbl=Scegliere il supporter di aiuto. È inoltre possib
 #StartServiceView
 startServiceBtn=Avviare servizio
 startServiceTitleLbl=Avviare servizio
-startServiceDescpriptionLbl=Il suo partner può connettersi soltanto attraverso la rubrica se lei avvia il servizio prima.  
-
+startServiceDescpriptionLbl=Il suo partner può connettersi soltanto attraverso la rubrica se lei avvia il servizio prima.
 
 #PopOver
 supportHelpLbl=Generazione chiavi - creazione di connessione\n\nPer creare una connessione tra di voi e il suo supporter è necessario generare una chiave e condividerla con il proprio supporter. Il tuo supporter utilizzerà questa chiave per connettersi con il suo dispositivo.\n\nBarra di stato \n\n La barra di stato alla fine della finestra mostra se esiste una possibilità di creare una connessione.\n\nVerde: Possibile stabilire la connessione. \nArancione: Non è ancora possibile stabilire una connessione. \n\nPer favore contatti il suo supporter se non è possibile creare una connessione.
 requestHelpLbl=Inserimento chiave - creazione connessione\n\nPer stabilire una connessione è necessario la chiave generata dal partner. Inserisci la chiave nel campo di testo a sinistra e premere \u0022Connect \u0022 per stabilire una connessione.\n\nBarra di stato\n\nLa barra di stato alla fine della finestra mostra se esiste una possibilità di creare una connessione.\n\nVerde: Possibile stabilire una connessione.\nArancione: Non è ancora possibile stabilire una connessione.\n\nPer favore contattare imedias se non è possibile creare una connessione.
-homeHelpLbl=Qui può scegliere tra le opzioni \u0022Ho bisogno di aiuto\u0022 e \u0022 Desidero aiutare qualcuno \u0022.\n\nPremere su \ u0022Ho bisogno di aiuto\u0022 se un supporter deve connettersi con il suo dispositivo.\n\nDesidero aiutare qualcuno se desiderate connettersi con un computer di un'altra persona da aiutare.
+homeHelpLbl=Qui può scegliere tra le opzioni \u0022Ho bisogno di aiuto\u0022 e \u0022 Desidero aiutare qualcuno \u0022.\n\nPremere su \u0022Ho bisogno di aiuto\u0022 se un supporter deve connettersi con il suo dispositivo.\n\nDesidero aiutare qualcuno se desiderate connettersi con un computer di un'altra persona da aiutare.
 
 #Dialog
 dialogTitleText=Dettagli sul supporter
