added missing translation 🇮🇹

--- a/src/ch/imedias/rsccfx/localization/Bundle_it.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_it.properties
@@ -34,7 +34,7 @@ stopService=Arresta servizio
 
 #Home
 homeRequestBigLbl=Ho bisogno di aiuto
-homeRequestSmallLbl=Get somebody to help you remotely
+homeRequestSmallLbl=Si prega di cercarsi aiuto remoto.
 homeSupportBigLbl=Io voglio aiutare qualcuno
 homeSupportSmallLbl=Qualcuno ha bisogno del mio aiuto
 
