fixed some typos - problem with unicode characters

--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -58,7 +58,7 @@ supportStatusLblReady=Bereit
 
 #StartServiceView
 startServiceDescpriptionLbl=Damit Ihr Partner durch das Adressbuch eine direkte Verbindung zu Ihnen herstellen kann, muss hier zuerst der Dienst gestartet werden.
-statusBoxServiceIdle=Dienst läuft nicht
+statusBoxServiceIdle=Dienst l\u00e4uft nicht
 statusBoxServiceStarted=Dienst wurde gestartet
 statusBoxServiceStopped=Dienst wurde gestoppt
 
