fixed mistake in translation, duplicate entry, belongs to supporter list only

--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -39,7 +39,7 @@ homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
 requestTitleLbl=Schl\u00fcssel generieren
-requestDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll. Sie k\u00F6nnen auch neue Supporter hinzuf\u00fcgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00fcr die Einstellungsdetails.
+requestDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll.
 requestKeyGeneratorPane=Schl\u00fcsselgenerierung
 requestGeneratedKeyFld=Schl\u00fcssel wird generiert...
 requestPredefinedAdressessPane=Adressbuch
