fixed mistake in translation, duplicate entry, belongs to supporter list only

--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -39,7 +39,7 @@ homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
 requestTitleLbl=Schl\u00fcssel generieren
-requestDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll.
+requestDescriptionLbl=Starten Sie eine neue Fernwartung, indem Sie den generierten Schlüssel Ihres Partners hier eingeben.
 requestKeyGeneratorPane=Schl\u00fcsselgenerierung
 requestGeneratedKeyFld=Schl\u00fcssel wird generiert...
 requestPredefinedAdressessPane=Adressbuch
