fixed stun server to abbreviation

--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -93,6 +93,6 @@ expertIcePortLbl=ICE Port
 expertUdpPackageSizeLbl=UDP Paketgr\u00F6sse
 expertForwardingPortLbl=lokaler Weiterleitungsport
 expertStunServerPortLbl=Stunserver Port
-expertStunserverLbl=Stunservers
+expertStunserverLbl=STUN-Server(s)
 expertSettingsBtn=Experteneinstellungen
 settingsTitleLbl=Experteneinstellungen
