--- a/src/ch/imedias/rsccfx/localization/Bundle_fr.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_fr.properties
@@ -1,35 +1,35 @@
 address=Adresse
 connectedTo=Connexion avec {0}
 connectingTo=Faire une connexion avec {0}
-connectionFailed=La connexion a echoué.
+connectionFailed=La connexion a echou\u00e9.
 description=Description
 editDialogCancelButtonText=Annuler
-editDialogDefaultButtonToolTipText=réinitialiser les paramètres par défaut
-editDialogDeleteButtonToolTipText=supprimer les adresses sélectionnées
-editDialogDownButtonToolTipText=déplacer les adresses sélectionnées vers le bas
-editDialogInsertButtonToolTipText=insérer l'adresse
+editDialogDefaultButtonToolTipText=r\u00e9initialiser les param\u00e8tres par d\u00e9faut
+editDialogDeleteButtonToolTipText=supprimer les adresses s\u00e9lectionn\u00e9es
+editDialogDownButtonToolTipText=d\u00e9placer les adresses s\u00e9lectionn\u00e9es vers le bas
+editDialogInsertButtonToolTipText=ins\u00e9rer l'adresse
 editDialogTitle=Modifier les adresses de support
-editDialogUpButtonToolTipText=déplacer les adresses sélectionnées vers le haut
+editDialogUpButtonToolTipText=d\u00e9placer les adresses s\u00e9lectionn\u00e9es vers le haut
 encryption=Cryptage
 error=Erreur
-errorNoPort={0} n'est pas de numéro de port valable
+errorNoPort={0} n'est pas de num\u00e9ro de port valable
 remoteSupportDialogCancelButtonText=Annuler
 remoteSupportDialogConnectButtonText=Faire une connexion
-remoteSupportDialogTitle=Contrôle à distance
+remoteSupportDialogTitle=Contr\u00f4le \u00e0 distance
 remoteSupportFrameBgr233CheckBoxText=Colours de 8 Bit
 remoteSupportFrameCompressionLabelText=Comprimer
-remoteSupportFrameDisconnectButtonText=Déconnecter
+remoteSupportFrameDisconnectButtonText=D\u00e9connecter
 remoteSupportFrameEditButtonToolTipText=modifier la liste
 remoteSupportFrameOfferSupportPanelTabConstraintsTabTitle=Offrir
-remoteSupportFramePicturePropertiesPanelBorderTitle=Propriétés d'images
-remoteSupportFrameQualityLabelText=Qualité
+remoteSupportFramePicturePropertiesPanelBorderTitle=Propri\u00e9t\u00e9s d'images
+remoteSupportFrameQualityLabelText=Qualit\u00e9
 remoteSupportFrameScaleLabelText=Redimensionnement d'images
-remoteSupportFrameSecurePortsLabelText=Ports sécurisées:
-remoteSupportFrameSecurePortsTextFieldToolTipText=liste de ports séparées par des virgules
+remoteSupportFrameSecurePortsLabelText=Ports s\u00e9curis\u00e9es:
+remoteSupportFrameSecurePortsTextFieldToolTipText=liste de ports s\u00e9par\u00e9es par des virgules
 remoteSupportFrameSeekSupportPanelTabConstraintsTabTitle=Rechercher
-remoteSupportFrameTitle=Contrôle à distance
-startService=Démarrer le service
-stopService=Arrêter le service
+remoteSupportFrameTitle=Contr\u00f4le \u00e0 distance
+startService=D\u00e9marrer le service
+stopService=Arr\u00eater le service
 
 # Home
 homeRequestBigLbl=J'ai besoin d'aide
@@ -38,34 +38,34 @@ homeSupportBigLbl=J'aimerais aider
 homeSupportSmallLbl=Quelqu'un a besoin de mon aide
 
 # RequestView
-requestTitleLbl=Générer la clé
+requestTitleLbl=G\u00e9n\u00e9rer la cl\u00e9
 requestDescriptionLbl=Choisissez le partenaire, qui devrai vous supporter.
-requestKeyGeneratorPane=Génération de clés
-requestGeneratedKeyFld=Générer la clé...
+requestKeyGeneratorPane=G\u00e9n\u00e9ration de cl\u00e9s
+requestGeneratedKeyFld=G\u00e9n\u00e9rer la cl\u00e9...
 requestPredefinedAdressessPane=Carnet d'adresses
 requestStatusLblWaiting=Attends...
-requestStatusLblReady=Prêt
-requestSupporterDescriptionLbl=Choisissez le partenaire, qui devrai vous supporter. Vous pouvez aussi ajouter des nouveaux partenaires ou les éditer. S'il vous plaît contacter votre partenaire pour les détails sur la configuration.
+requestStatusLblReady=Pr\u00eat
+requestSupporterDescriptionLbl=Choisissez le partenaire, qui devrai vous supporter. Vous pouvez aussi ajouter des nouveaux partenaires ou les \u00e9diter. S'il vous pla\u00eet contacter votre partenaire pour les d\u00e9tails sur la configuration.
 
 # SupportView
-supportTitleLbl=Entrer la clé
-supportDescriptionLbl=Initialise un nouveau contrôle à distance par l'entrée de la clé généré de votre partenaire.
+supportTitleLbl=Entrer la cl\u00e9
+supportDescriptionLbl=Initialise un nouveau contr\u00f4le \u00e0 distance par l'entr\u00e9e de la cl\u00e9 g\u00e9n\u00e9r\u00e9 de votre partenaire.
 supportConnectBtn=Faire une connexion
-supportKeyInputPane=Génération de clé
-supportAdressBookPane=Démarrer le service
+supportKeyInputPane=G\u00e9n\u00e9ration de cl\u00e9
+supportAdressBookPane=D\u00e9marrer le service
 supportStatusLblWaiting=Attends...
-supportStatusLblReady=Prêt
+supportStatusLblReady=Pr\u00eat
 
 #StartServiceView
-startServiceDescpriptionLbl=Pour que votre partenaire puisse faire une connexion directement avec vous par le carnet d'adresses, il faut que le service soit démarré ici auparavant.
-statusBoxServiceIdle=Le service n'est pas encore demarré
-statusBoxServiceStarted=Le service a été demarré
-statusBoxServiceStopped=Le service a été arrêté
+startServiceDescpriptionLbl=Pour que votre partenaire puisse faire une connexion directement avec vous par le carnet d'adresses, il faut que le service soit d\u00e9marr\u00e9 ici auparavant.
+statusBoxServiceIdle=Le service n'est pas encore demarr\u00e9
+statusBoxServiceStarted=Le service a \u00e9t\u00e9 demarr\u00e9
+statusBoxServiceStopped=Le service a \u00e9t\u00e9 arr\u00eat\u00e9
 
 #PopOver
 homeHelpLbl=Ici vous pouvez choisir entre les options "J'ai besoin d'aide" et "J'aimerais aider".\n\nCliquez sur "J'ai besoin d'aide" si votre partenaire doit faire une connexion avec votre appareil.\n\nCliquez sur "J'aimerais aider" si vous vous voulez faire une connexion avec votre partenaire.
-supportHelpLbl=Génération de clé - établissement de la connexion\n\nPour créer une connexion avec votre partenaire, vous avez besoin de sa clé généré.\nEntrez la clé dans la zone de texte qui se trouve du côté gauche et cliquez sur "Faire une connexion" pour créer une connexion.\n\nBarre d'état\nLa barre d'état à la fin de la fenêtre vous affiche si une connexion est possible.\n"Verte": établissement de la connexion possible.\n"Orange": établissement de la connexion n'est pas encore possible.\n\nS'il vous plaît contactez imedias, si la connexion n'est pas possible.
-requestHelpLbl=Génération de clé - établissement de la connexion\n\nPour créer une connexion avec votre partenaire vous devez générer une clé.\nCommuniquer votre clé à votre partenaire. Il en a besoin pour créer une connexion.\nBarre d'état\nLa barre d'état à la fin de la fenêtre vous affiche si une connexion est possible.\n"Verte": établissement de la connexion possible.\n"Orange": établissement de la connexion n'est pas encore possible.\n\nS'il vous plaît contactez votre partenaire, si la connexion n'est pas possible.
+supportHelpLbl=G\u00e9n\u00e9ration de cl\u00e9 - \u00e9tablissement de la connexion\n\nPour cr\u00e9er une connexion avec votre partenaire, vous avez besoin de sa cl\u00e9 g\u00e9n\u00e9r\u00e9.\nEntrez la cl\u00e9 dans la zone de texte qui se trouve du c\u00f4t\u00e9 gauche et cliquez sur "Faire une connexion" pour cr\u00e9er une connexion.\n\nBarre d'\u00e9tat\nLa barre d'\u00e9tat \u00e0 la fin de la fen\u00eatre vous affiche si une connexion est possible.\n"Verte": \u00e9tablissement de la connexion possible.\n"Orange": \u00e9tablissement de la connexion n'est pas encore possible.\n\nS'il vous pla\u00eet contactez imedias, si la connexion n'est pas possible.
+requestHelpLbl=G\u00e9n\u00e9ration de cl\u00e9 - \u00e9tablissement de la connexion\n\nPour cr\u00e9er une connexion avec votre partenaire vous devez g\u00e9n\u00e9rer une cl\u00e9.\nCommuniquer votre cl\u00e9 \u00e0 votre partenaire. Il en a besoin pour cr\u00e9er une connexion.\nBarre d'\u00e9tat\nLa barre d'\u00e9tat \u00e0 la fin de la fen\u00eatre vous affiche si une connexion est possible.\n"Verte": \u00e9tablissement de la connexion possible.\n"Orange": \u00e9tablissement de la connexion n'est pas encore possible.\n\nS'il vous pla\u00eet contactez votre partenaire, si la connexion n'est pas possible.
 
 #Dialog
 dialogTitleText=Details du partenaire
@@ -74,25 +74,25 @@ dialogAddressText=Adresse
 dialogPortText=Port
 dialogImageText=Image
 dialogChargeableLbl=Payant
-dialogEncryptedLbl=Crypté
+dialogEncryptedLbl=Crypt\u00e9
 
 #Setting
 supportCompressionLbl=Compression
-supportQualityLbl=Qualité
+supportQualityLbl=Qualit\u00e9
 supportBgr233Lbl=BGR233
 requestViewOnlyLbl=Retransmettre seulement l'image
-bgr233DescriptionLbl=Cette option réduits la qualité de la transmission.
+bgr233DescriptionLbl=Cette option r\u00e9duits la qualit\u00e9 de la transmission.
 
 #ExpertSettings
-expertSettingsDialogTitle=Paramètres expert
+expertSettingsDialogTitle=Param\u00e8tres expert
 expertForceConnectOverServerLbl=Forcer la connexion par le serveur
-expertKeyserverIpLbl= Adresse IP du serveur de clé
-expertKeyserverHttpLbl=Port HTTP du serveur de clé
+expertKeyserverIpLbl= Adresse IP du serveur de cl\u00e9
+expertKeyserverHttpLbl=Port HTTP du serveur de cl\u00e9
 expertVncPortLbl=Port de VNC
 expertIcePortLbl=Port de ICE
 expertUdpPackageSizeLbl=Taille des paquets UDP
 expertForwardingPortLbl=Forwarding port local
 expertStunServerPortLbl=Port du serveur STUN
 expertStunserverLbl=Serveurs STUN
-expertSettingsBtn=Paramètres expert
-settingsTitleLbl=Paramètres expert
+expertSettingsBtn=Param\u00e8tres expert
+settingsTitleLbl=Param\u00e8tres expert
