--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -39,7 +39,7 @@ homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
 requestTitleLbl=Schl\u00fcssel generieren
-requestDescriptionLbl=Starten Sie eine neue Fernwartung, indem Sie den generierten Schlüssel Ihres Partners hier eingeben.
+requestDescriptionLbl=Starten Sie eine neue Fernwartung, indem Sie den generierten Schl\u00fcssel Ihres Partners hier eingeben.
 requestKeyGeneratorPane=Schl\u00fcsselgenerierung
 requestGeneratedKeyFld=Schl\u00fcssel wird generiert...
 requestPredefinedAdressessPane=Adressbuch
@@ -58,7 +58,7 @@ supportStatusLblReady=Bereit
 
 #StartServiceView
 startServiceDescpriptionLbl=Damit Ihr Partner durch das Adressbuch eine direkte Verbindung zu Ihnen herstellen kann, muss hier zuerst der Dienst gestartet werden.
-statusBoxServiceIdle=Dienst läuft nicht
+statusBoxServiceIdle=Dienst l\ufffduft nicht
 statusBoxServiceStarted=Dienst wurde gestartet
 statusBoxServiceStopped=Dienst wurde gestoppt
 
